--- a/GradeOne/Adelakun-Ireoluwa-John-Result.html
+++ b/GradeOne/Adelakun-Ireoluwa-John-Result.html
@@ -92,8 +92,8 @@
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Adelakun Ireoluwa John</h2><br>
-                     <h2> Grade Two </h2>
-able>
+                  
+<table>
                      <h2> Grade Three </h2>
                      table>
                                              <p>Continuous Assessment Scores for Term : 3rd Term 2025/2026. </p>
@@ -116,7 +116,7 @@ able>
                         </tr>
                         <tr>
                           <td>No. of times school opened</td>
-                          <td>124</td> 
+                          <td>122</td> 
                                          
                        </tr>
                        <tr>
@@ -1845,4 +1845,5 @@ able>
       </script>
    </body>
 </html>
+
 
