--- a/GradeThree/Akeredolu-Lucia-Result.html
+++ b/GradeThree/Akeredolu-Lucia-Result.html
@@ -94,7 +94,7 @@
                      <h2>Result for <br>Akeredolu Obaaraoluwa Lucia/h2><br>
                      <h2> Grade Three </h2>
                      <table>
-                        <p>Continuous Assessment Scores for 1st Term  ..................... </p>
+                        <p>Continuous Assessment Scores for 1st Term 2025/2026 ..................... </p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -114,7 +114,7 @@
                         </tr>
                         <tr>
                           <td>No. of times school opened</td>
-                          <td>124</td> 
+                          <td>122</td> 
                                          
                        </tr>
                        <tr>
@@ -607,3 +607,4 @@
    </body>
 
 </html>
+
