--- a/GradeThree/Akinpelu-Oluwatosin-Result.html
+++ b/GradeThree/Akinpelu-Oluwatosin-Result.html
@@ -92,9 +92,9 @@
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
                      <h2>Result for <br>Akinpelu Oluwatosin</h2><br>
-                     <h2> Grade Four </h2>
+                     <h2> Grade Five </h2>
                      <table>
-                        <p>Continuous Assessment Scores for Term: 3rd term 2024/2025</p>
+                        <p>Continuous Assessment Scores for Term: 1st term 2025/2026</p>
                          
                         <!-- Attendance Table-->
                      &nbsp;
@@ -2691,3 +2691,4 @@
       </script>
    </body>
 </html>
+
