--- a/PreSchool/Ayomade-Faizol-Adebayo.html
+++ b/PreSchool/Ayomade-Faizol-Adebayo.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Ayomide <br> Faisal Adebayo's<br> Portal 
+                                             Ayomade <br> Faizol Adebayo's<br> Portal 
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href=""> Ayomide Faisal Adebayo<span></span></a>
+                                             <a class="read_more" href=""> Ayomade Faizol Adebayo<span></span></a>
                                           </div>
                                        </div>
                                     </div>
@@ -525,4 +525,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
