--- a/GradeTwo/Oladejo-Obaoluwa-Result.html
+++ b/GradeTwo/Oladejo-Obaoluwa-Result.html
@@ -271,7 +271,7 @@
                           <td>Very Good</td>
                           <td>Good</td>
                           <td></td>
-                          <td>Class Average</td>                           
+                          <td>Average</td>                           
                         </tr>
                         <tr>
                           <td></td>
@@ -636,3 +636,4 @@
    </body>
 
 </html>
+
