--- a/Yinka-Daniel.html
+++ b/Yinka-Daniel.html
@@ -105,7 +105,7 @@
                                        <div class="board">
                                           <i><img src="images/top_icon.png" alt="#"/></i>
                                           <h3>
-                                             Yinka <br> Daniel's<br> Portal
+                                             Daniel Semiloore <br> Yinka-Sobo's<br> Portal
                                           </h3>
                                           <!--div class="link_btn">
                                              <a class="read_more" href="Javascript:void(0)">Read More   <span></span></a>
@@ -131,7 +131,7 @@
                                              Results<br> Notes<br> Records
                                           </h3>
                                           <div class="link_btn">
-                                             <a class="read_more" href="">Yinka Daniel<span></span></a>
+                                             <a class="read_more" href="">Daniel Semiloore Yinka-Sobo<span></span></a>
                                           </div>
                                        </div>
                                     </div>
@@ -525,4 +525,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
