--- a/Yinka-Daniel-Result.html
+++ b/Yinka-Daniel-Result.html
@@ -91,7 +91,7 @@
                   &nbsp;
                   <p>120 Akorede Layout Felele, Ibadan <br>Tel: 07053001294, 08143149947</p>
                   <div class="titlepage p1 ">
-                     <h2>Result for <br>Daniel Semilore Yinka-Sobo</h2><br>
+                     <h2>Result for <br>Daniel Semiloore Yinka-Sobo</h2><br>
                      <h2> JSS ONE </h2>
                      <table>
                         <p>Continuous Assessment Scores for 1st Term 2025/2026 Academic Session ..................... </p>
@@ -647,4 +647,5 @@
    </body>
 
 </html>
+
 
