--- a/GradeTwo/Akinbogun-Morayo-Result.html
+++ b/GradeTwo/Akinbogun-Morayo-Result.html
@@ -95,7 +95,7 @@
                       <h2> Grade Three </h2>
   <table>
      <h2>Result for <br>Akinbogun Morayo</h2><br>
-                      <h2> Grade Three </h2>
+                      <h2> Grade Four </h2>
   <table>
                         <p> Click back on browser to go back to students profile </p> 
                         <p>Continuous Assessment Scores for Term: 1st Term 2025/2026 Academic Session  </p>
@@ -3092,5 +3092,6 @@
       </script>
    </body>
 </html>
+
 
 
