--- a/GradeSix/GradeSix-Note.html
+++ b/GradeSix/GradeSix-Note.html
@@ -89,8 +89,19 @@
                <div class="col-md-6">
                   <div class="titlepage text_align_left">
                      <h2>See Notes Here</h2>
-                     <p>No Note Yet
-                     </p>
+                     div class="document-item">
+            <div class="document-icon">📄</div>
+            <div class="document-info">
+                <h3>User Manual</h3>
+                <p>Complete guide to using our product</p>
+            </div>
+            <!-- Replace with your Dropbox link -->
+            <a href="https://www.dropbox.com/scl/fi/t17egmte4kra9oxbi4f80/MISS-TAIWO-JSS-ONE.docx?rlkey=pxkhqnck0hpt30s72vpqczt8h&st=6zeolkdv&dl=1" 
+               class="download-btn" 
+               target="_blank">
+               Download
+            </a>
+        </div>
                      <h2> Click back on browser to go back to students profile </h2>
                      <div class="link_btn">
                         <a class="read_more" href="about.html"></a>
@@ -192,4 +203,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
