--- a/GradeSix/GradeSix-Note.html
+++ b/GradeSix/GradeSix-Note.html
@@ -89,7 +89,7 @@
                <div class="col-md-6">
                   <div class="titlepage text_align_left">
                      <h2>See Notes Here</h2>
-                     div class="document-item">
+                     <div class="document-item">
             <div class="document-icon">📄</div>
             <div class="document-info">
                 <h3>User Manual</h3>
@@ -205,3 +205,4 @@
    </body>
 
 </html>
+
