--- a/GradeSix/GradeSix-Note.html
+++ b/GradeSix/GradeSix-Note.html
@@ -92,11 +92,11 @@
                      <div class="document-item">
             <div class="document-icon">📄</div>
             <div class="document-info">
-                <h3>User Manual</h3>
-                <p>Complete guide to using our product</p>
+                <p>Miss Taiwo's Note</p>
+                
             </div>
             <!-- Replace with your Dropbox link -->
-            <a href="https://www.dropbox.com/scl/fi/t17egmte4kra9oxbi4f80/MISS-TAIWO-JSS-ONE.docx?rlkey=pxkhqnck0hpt30s72vpqczt8h&st=6zeolkdv&dl=1" 
+            <a href="https://www.dropbox.com/scl/fi/t17egmte4kra9oxbi4f80/MISS-TAIWO-JSS-ONE.docx?rlkey=pxkhqnck0hpt30s72vpqczt8h&st=6zeolkdv&dl=0" 
                class="download-btn" 
                target="_blank">
                Download
@@ -205,4 +205,5 @@
    </body>
 
 </html>
+
 
