Update and rename about.html to note.html

--- a/note.html
+++ b/note.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>sbs</title>
+      <title>MCL</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -41,7 +41,7 @@
                   <div class="full">
                      <div class="center-desk">
                         <div class="logo">
-                           <a href="index.html"><img src="images/logo.png" alt="#" /></a>
+                           <a href="index.html"><img src="images/monterssori-careland-logo.png" alt="#" /></a>
                         </div>
                      </div>
                   </div>
@@ -52,7 +52,7 @@
                      <span class="navbar-toggler-icon"></span>
                      </button>
                      <div class="collapse navbar-collapse" id="navbarsExample04">
-                        <ul class="navbar-nav mr-auto">
+                        <!--ul class="navbar-nav mr-auto">
                            <li class="nav-item">
                               <a class="nav-link" href="index.html">Home</a>
                            </li>
@@ -68,16 +68,16 @@
                            <li class="nav-item">
                               <a class="nav-link" href="contact.html">Contact Us</a>
                            </li>
-                        </ul>
+                        </ul-->
                      </div>
                   </nav>
                </div>
-               <div class="col-md-2">
+               <!--div class="col-md-2">
                   <ul class="email text_align_right">
                      <li class="d_none"><a href="Javascript:void(0)"><i class="fa fa-user" aria-hidden="true"></i></a></li>
                      <li class="d_none"> <a href="Javascript:void(0)"><i class="fa fa-search" style="cursor: pointer;" aria-hidden="true"></i></a> </li>
                   </ul>
-               </div>
+               </div-->
             </div>
          </div>
       </div>
@@ -88,17 +88,29 @@
             <div class="row d_flex">
                <div class="col-md-6">
                   <div class="titlepage text_align_left">
-                     <h2>About <br>Skating <br> school</h2>
-                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alterationThere are many variatioThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alterationThere are many variationsns
-                     </p>
+                     <h2>See Notes Here</h2>
+                     <div class="document-item">
+            <div class="document-icon">📄</div>
+            <div class="document-info">
+                <p>Miss Taiwo's Note</p>
+                
+            </div>
+            <!-- Replace with your Dropbox link -->
+            <a href="https://www.dropbox.com/scl/fi/t17egmte4kra9oxbi4f80/MISS-TAIWO-JSS-ONE.docx?rlkey=pxkhqnck0hpt30s72vpqczt8h&st=6zeolkdv&dl=0" 
+               class="download-btn" 
+               target="_blank">
+               Download
+            </a>
+        </div>
+                     <h2> Click back on browser to go back to students profile </h2>
                      <div class="link_btn">
-                        <a class="read_more" href="about.html">Read More</a>
+                        <a class="read_more" href="about.html"></a>
                      </div>
                   </div>
                </div>
                <div class="col-md-6">
                   <div class="about_img text_align_center">
-                     <figure><img src="images/about.png" alt="#"/></figure>
+                     <!--figure><img src="images/about.png" alt="#"/></figure-->
                   </div>
                </div>
             </div>
@@ -106,7 +118,7 @@
       </div>
       <!-- end about -->
       <!--  footer -->
-      <footer>
+      <!--footer>
          <div class="footer">
             <div class="container">
                <div class="row">
@@ -168,12 +180,12 @@
                      </div>
                   </div>
                </div>
-            </div>
+            </div-->
             <div class="copyright">
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>© 2020 All Rights Reserved. Design by <a href="https://html.design/"> Free html Templates</a></p>
+                        <p>© 2023 All Rights Reserved <a href=""> Montessori Careland School</a></p>
                      </div>
                   </div>
                </div>
@@ -191,4 +203,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
