--- a/Akinbogun-Christopher.html
+++ b/Akinbogun-Christopher.html
@@ -209,7 +209,7 @@
                      <h3>Notes</h3>
                      <p>Find all notes available online </p>
                   </div>
-                  <a class="read_more" href="GradeSix-Note.html">Read More</a>
+                  <a class="read_more" href="Note.html">Read More</a>
                </div>
                <div class="col-md-4 margi_bottom">
                   <div class="class_box text_align_center">
@@ -526,3 +526,4 @@
       </script>
    </body>
 </html>
+
