--- a/Ariyo-Yanmife.html
+++ b/Ariyo-Yanmife.html
@@ -209,7 +209,7 @@
                      <h3>Notes</h3>
                      <p>Find all notes available online </p>
                   </div>
-                  <a class="read_more" href="JssOne-Note.html">Read More</a>
+                  <a class="read_more" href="Note.html">Read More</a>
                </div>
                <div class="col-md-4 margi_bottom">
                   <div class="class_box text_align_center">
@@ -525,4 +525,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
