--- a/Fikayo-Fayomi.html
+++ b/Fikayo-Fayomi.html
@@ -217,7 +217,7 @@
                      <h3>Information</h3>
                      <p>Find out more</p>
                   </div>
-                  <a class="read_more" href="JssOne-Info.html">Read More</a>
+                  <a class="read_more" href="Info.html">Read More</a>
                </div>
             </div>
          </div>
@@ -525,4 +525,5 @@
          AOS.init();
       </script>
    </body>
+
 </html>
